Added an id 'submit' to a button
Set up query selector to trigger on id submit and added an event listener for 'click' for a function called checkGuess

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
     <label for="guess">Your Guess:</label>
     <input id="guess" type="number" min="1" max="100">
-    <button type="button">Submit</button>
+    <button id="submit" type="button">Submit</button>
 
     <p id="tooHighOrLow"></p>
 
     <p id="guesses"></p>
-
+    <script src="js/main.js"></script>
 </body>
 </html>
