Created an empty array to store previous player guesses and added logic to add the previous guess to the empty array and display them in the HTML after getting the correct answer

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <button id="submit" type="button">Submit</button>
 
     <p id="tooHighOrLow"></p>
-
     <p id="guesses"></p>
+    <p id="previousGuesses"></p>
     <script src="js/main.js"></script>
 </body>
 </html>
