Added a reset button in the HTML

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <label for="guess">Your Guess:</label>
     <input id="guess" type="number" min="1" max="100">
     <button id="submit" type="button">Submit</button>
+    <button id="reset" type="button">Reset</button>
 
     <p id="tooHighOrLow"></p>
     <p id="guesses"></p>
