Wrapped my game in a div container and then added some CSS to center that container

--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
 </head>
 <body>
 
-    <h1>Number Guessing Game</h1>
+    <div class="box">
+        <h1>Number Guessing Game</h1>
 
-    <p>This is the number guessing game. Please guess a number between 1-100 and I will tell you whether it is correct.</p>
+        <p>This is the number guessing game. Please guess a number between 1-100 and I will tell you whether it is correct.</p>
 
-    <label for="guess">Your Guess:</label>
-    <input id="guess" type="number" min="1" max="100">
-    <button id="submit" type="button">Submit</button>
-    <button id="reset" type="button">Reset</button>
+        <label for="guess">Your Guess:</label>
+        <input id="guess" type="number" min="1" max="100">
+        <button id="submit" type="button">Submit</button>
+        <button id="reset" type="button">Reset</button>
 
-    <p id="tooHighOrLow"></p>
-    <p id="guesses"></p>
-    <p id="previousGuesses"></p>
-    <script src="js/main.js"></script>
+        <p id="tooHighOrLow"></p>
+        <p id="guesses"></p>
+        <p id="previousGuesses"></p>
+        <script src="js/main.js"></script>
+    </div>
+    
 </body>
 </html>
