--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Number Guessing Game</title>
 </head>
@@ -18,7 +21,7 @@
         <button id="submit" type="button">Submit</button>
         <button id="reset" type="button">Reset</button>
 
-        <p id="tooHighOrLow"></p>
+        <p id="tooHighOrLow" class="green red"></p>
         <p id="guesses"></p>
         <p id="previousGuesses"></p>
         <script src="js/main.js"></script>
